# Agentic-financial-analyst

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/: README.md
docs/: DESIGN.md  azure-openai-setup.md
evals/: README.md  agent_results.md  results.md
ledgerlens/: __init__.py  config.py  engine.py  net.py  validation.py
ledgerlens/agent/: __init__.py  agent.py  prompts.py  schema.py  tools.py  workspace.py
ledgerlens/agent/demo_data/: AAPL.json  AMZN.json  GOOGL.json  META.json  MSFT.json  NVDA.json
ledgerlens/api/: __init__.py  app.py
ledgerlens/evaluation/: __init__.py  abstention.py  agent_eval.py  finqa.py  finqa_qa.py  finqa_replay.py  retrieval.py
ledgerlens/executor/: __init__.py  dsl.py  finqa.py  numbers.py  program.py
ledgerlens/ingest/: __init__.py  edgar.py  filing.py  xbrl.py
ledgerlens/llm/: __init__.py  client.py
ledgerlens/retrieval/: __init__.py  bm25.py  chunk.py  hybrid.py  vector.py
ledgerlens/solver/: __init__.py  prompts.py  schema.py  solver.py
ledgerlens/ui/: __init__.py  app.py
tests/: test_abstention.py  test_agent.py  test_config.py  test_engine.py  test_executor.py  test_finqa_program.py  test_ingest.py  test_llm_client.py  test_numbers.py  test_retrieval.py  test_solver.py  test_validation.py
