[project]
name = "ledgerlens"
version = "0.1.0"
description = "Grounded financial-QA engine: retrieve evidence, the LLM proposes a reasoning program, a deterministic executor computes the answer — every figure cited and verified."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Chaitanya Chilukuri" }]
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "truststore>=0.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ledgerlens"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.ruff.lint.isort]
known-first-party = ["ledgerlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not live'"
markers = [
    "live: tests that hit real provider APIs (opt-in; require credentials).",
]
